# drone-ws-target-tracking-cxx

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  gcc15-toolchain.cmake  vcpkg.json
certificates/: server-key.pem  server.pem
cmake/: toolchain.cmake
protocol/: CMakeLists.txt
protocol/include/: protocol.hpp
protocol/src/: protocol.cpp
src/: main.cpp
svckit/: CMakeLists.txt
svckit/include/: svc_addr_config.hpp
ws-client/: CMakeLists.txt  Dockerfile
ws-client/include/: ws_client.hpp
ws-client/src/: main.cpp  ws_client.cpp
ws-server/: CMakeLists.txt  Dockerfile
ws-server/include/: ws_server.hpp
ws-server/src/: main.cpp  ws_server.cpp
